--- a/src/containers/Pages/Login/loginPage.css
+++ b/src/containers/Pages/Login/loginPage.css
@@ -1,6 +1,7 @@
-.container {
+.container-login {
     display: flex;
     height: 100vh;
+    font-family: "Nunito";
 }
 
 .left-side {
@@ -17,6 +18,7 @@
     align-items: center;
     justify-content: center;
     background-color: white;
+    width: 100%;
 }
 
 .title-left {
@@ -44,13 +46,6 @@
     color: #445462;
 }
 
-h2 {
-    margin-bottom: 0px;
-    margin-top: 0px;
-    font-size: 30px;
-    color: #445462;
-}
-
 .title-color {
     color: #14346c;
 }
@@ -65,4 +60,16 @@ h2 {
     text-align: center;
     font-size: 18px;
     display: block;
+}
+
+.title-login {
+    margin-bottom: 0px;
+    margin-top: 0px;
+    font-size: 30px;
+    color: #445462;
+    text-align: center;
+}
+
+.header-login button {
+    max-width: 341px;
 }
